--- a/docs/小程序/小程序开发常见问题.md
+++ b/docs/小程序/小程序开发常见问题.md
@@ -84,3 +84,17 @@ https://developers.weixin.qq.com/miniprogram/dev/component/input.html
 ### setData
 
 小程序setData会导致页面渲染，所以当页面的数据不需要渲染时，可以直接赋值。
+
+app.wxss中的全局样式对自定义组件不生效
+
+
+
+
+
+## 上线后出现的问题
+
+### 域名不合法
+
+报错信息：equest:fail url not in domain list
+
+解决办法：在微信公众平台后台配置域名
