--- a/docs/frontend/css/文本渲染/文本溢出处理.md
+++ b/docs/frontend/css/文本渲染/文本溢出处理.md
@@ -1,3 +1,7 @@
+---
+title: 文本溢出及换行问题
+---
+
 ## text-overflow
 
 **`text-overflow`** [CSS](https://developer.mozilla.org/en-US/docs/Web/CSS) 属性确定如何向用户发出未显示的溢出内容信号。它可以被剪切，显示一个省略号（'...'，U + 2026 HORIZONTAL ELLIPSIS）或显示一个自定义字符串。
@@ -22,4 +26,26 @@
 1. 必须是块元素
 2. text-overflow: ellipsis;属性
 3. 设置overflow: hidden;
+
+## white-space
+
+https://developer.mozilla.org/zh-CN/docs/Web/CSS/white-space
+
+**`white-space`** CSS 属性是用来设置如何处理元素中的 [空白 ](https://developer.mozilla.org/en-US/docs/Glossary/Whitespace)
+
+- nowrap
+
+  和 normal 一样，连续的空白符会被合并。但文本内的换行无效。
+
+  文本不会换行，文本会在在同一行上继续，直到遇到 br 标签为止
+
+- pre
+
+  连续的空白符会被保留。在遇到换行符或者 br 元素时才会换行。
+
+## word-break
+
+https://developer.mozilla.org/zh-CN/docs/Web/CSS/word-break
+
+`word-break` 指定了怎样在单词内断行
 
