--- a/docs/frontend/css/文本渲染/文本溢出及换行.md
+++ b/docs/frontend/css/文本渲染/文本溢出及换行.md
@@ -33,19 +33,34 @@ https://developer.mozilla.org/zh-CN/docs/Web/CSS/white-space
 
 **`white-space`** CSS 属性是用来设置如何处理元素中的 [空白 ](https://developer.mozilla.org/en-US/docs/Glossary/Whitespace)
 
-- nowrap
+- **nowrap**
 
   和 normal 一样，连续的空白符会被合并。但文本内的换行无效。
 
   文本不会换行，文本会在在同一行上继续，直到遇到 br 标签为止
 
-- pre
+- **pre**
 
   连续的空白符会被保留。在遇到换行符或者 br 元素时才会换行。
+
+  行为类似于 pre 标签
+
+tailwindcss
+
+```css
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+.whitespace-pre	{
+  white-space: pre;
+}
+```
+
+
 
 ## word-break
 
 https://developer.mozilla.org/zh-CN/docs/Web/CSS/word-break
 
-`word-break` 指定了怎样在单词内断行
+`word-break` 指定了怎样在单词内断行，word-break 用于对长单词打断。
 
