fix: 更新软件设置

--- a/docs/frontend/JavaScript/运算符及操作符.md
+++ b/docs/frontend/JavaScript/运算符及操作符.md
@@ -19,6 +19,10 @@ new Boolean(undefined) // false
 
 
 
+## 可选链操作符
+
+https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Optional_chaining
+
 ### in 操作符
 
 如果指定的属性在指定的对象或其原型链中，则**`in` 运算符**返回`true`。
