--- a/docs/frontend/css/文本渲染/文本溢出及换行.md
+++ b/docs/frontend/css/文本渲染/文本溢出及换行.md
@@ -39,11 +39,25 @@ https://developer.mozilla.org/zh-CN/docs/Web/CSS/white-space
 
   文本不会换行，文本会在在同一行上继续，直到遇到 br 标签为止
 
+  **文本内的空格会渲染，\n不会渲染，文字可以溢出元素**
+
+  <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/20220425115657.png" style="zoom:67%;" />
+
 - **pre**
 
   连续的空白符会被保留。在遇到换行符或者 br 元素时才会换行。
 
   行为类似于 pre 标签
+  
+  **即文本内的空格和\n 会被渲染出来，文字可以溢出元素**
+  
+  <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/20220425115544.png" style="zoom:67%;" />
+
+- **pre-wrap**
+
+  比pre多出一个文字溢出时会自动换行的行为
+
+  <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/20220425120741.png" style="zoom:67%;" />
 
 tailwindcss
 
