--- a/docs/linux/常用命令/命令协作使用.md
+++ b/docs/linux/常用命令/命令协作使用.md
@@ -1,3 +1,9 @@
+---
+title: Linux多命令协作
+---
+
+
+
 ## ls grep rm
 
 使用 xargs 给其他命令传递参数的一个过滤器
@@ -16,4 +22,8 @@ $ ls | grep 'Con' | xargs -t ls
 ls Config.json
 Config.json
 ```
+
+
+
+## xargs
 
