fix: 小程序环境配置

--- a/docs/小程序/小程序多环境配置.md
+++ b/docs/小程序/小程序多环境配置.md
@@ -44,3 +44,30 @@ envVersion有以下几个值：
 const env = __wxConfig?.envVersion ?? 'release'
 ```
 
+
+
+```js
+const envMaps = {
+  develop: {
+    BASE_URL: 'https://oa-dev.zy-health.net',
+    OA_URL: 'https://oa-test-php.zy-health.net/general',
+  },
+  trial: {
+    BASE_URL: 'https://oa-test.zy-health.net',
+    OA_URL: 'https://oa-test-php.zy-health.net/general',
+  },
+  release: {
+    BASE_URL: 'https://oa-dev.zy-health.net',
+    OA_URL: 'https://oa-test-php.zy-health.net/general',
+  },
+}
+const envVersion = __wxConfig?.envVersion ?? 'release'
+
+console.log('envVersion: ', envVersion, envMaps[envVersion]);
+
+const config = envMaps[envVersion]
+
+module.exports = config
+```
+
+再在其他文件如`api/index.js`中导入
