--- a/docs/frontend/JavaScript/相等性判断与隐式转换.md
+++ b/docs/frontend/JavaScript/相等性判断与隐式转换.md
@@ -73,3 +73,15 @@ a.includes(NaN) // true
 
 includes内部使用的比较算法就是**SameValueZero**。
 
+
+
+## 类型转换
+
+### Number转Boolean
+
+```js
+!!1 // true
+!!0 // false
+!!'1' // true
+```
+
