fix: update JavaScript

--- a/docs/hardware/黑苹果/黑苹果材料整理.md
+++ b/docs/hardware/黑苹果/黑苹果材料整理.md
@@ -1,4 +1,4 @@
-### 黑苹果资料整理
+## 黑苹果资料整理
 
 [黑果小兵](https://blog.daliansky.net/)
 
@@ -12,7 +12,7 @@ https://heipg.cn/
 
 http://imacos.top/2020/01/14/1753/
 
-### 黑苹果工具
+## 黑苹果工具
 
 [OpenCore Configurator](https://mackie100projects.altervista.org/download-opencore-configurator/)
 
@@ -24,7 +24,7 @@ balenaEtcher 启动盘制作软件
 
 Hackintosh
 
-### 黑苹果EFI配置
+## 黑苹果EFI配置
 
 [10400+B460M-MORTAR](https://github.com/cheneyxx/Hackintosh-10400-B460M-MORTAR)
 
@@ -38,10 +38,21 @@ Hackintosh
 
 
 
-### 黑苹果硬件
+## 黑苹果硬件
 
-**免驱显卡**
+### 免驱显卡
 
 RX460
 
 产品尺寸：217×105×37mm
+
+
+
+### 网卡
+
+BCM94360CS2
+
+BCM94360CD （推荐台式机）
+
+BCM94360Z4 （推荐笔记本）
+
