--- a/docs/frontend/JavaScript/运算符与逻辑/4-原型链与继承.md
+++ b/docs/frontend/JavaScript/运算符与逻辑/4-原型链与继承.md
@@ -1,7 +1,5 @@
 ---
-title: JavaScript原型及原型链的学习
-tags:
-- JavaScript
+title: 原型链与继承
 ---
 
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
