--- a/docs/frontend/css/css布局/表格布局.md
+++ b/docs/frontend/css/css布局/表格布局.md
@@ -2,7 +2,15 @@
 title: 表格布局
 ---
 
+## 表格元素
 
+[html表格入门](https://developer.mozilla.org/zh-CN/docs/Learn/HTML/Tables/Basics)
+
+- tr	table row的缩写
+
+- th   table head 的缩写
+
+- td   table data的缩写，表格数据单元格
 
 ## 表格边框
 
@@ -25,3 +33,8 @@ border-collapse
 border-collapse: collapse;
 ```
 
+
+
+## 合并单元格
+
+colspan属性
