--- a/docs/linux/常用命令/命令协作使用.md
+++ b/docs/linux/常用命令/命令协作使用.md
@@ -27,3 +27,12 @@ Config.json
 
 ## xargs
 
+### -I
+
+xargs 的一个 **选项 -I** ，使用 -I 指定一个替换字符串{}，这个字符串在 xargs 扩展时会被替换掉，当 -I 与 xargs 结合使用
+
+```sh
+# 移动文件
+$ mdfind "picgo" | grep 'dmg' | xargs -I file mv file ~/iCloud云盘（归档）
+```
+
