fix: 小程序自定义navigationBar

--- a/docs/hardware/装机.md
+++ b/docs/hardware/装机.md
@@ -65,9 +65,11 @@ cpu散热器高度：<=60mm
 
 ---
 
-先马趣造：391mm✖️185mm✖️303mm
+先马趣造：391mm✖️185mm✖️303mm （长宽高）
 
 长城阿基米德km-1w：390mm✖️230mm✖️375mm
+
+乔思伯d30：401✖️204✖️337
 
 #### 显卡
 
