docs: 小程序,装机

--- a/docs/hardware/装机.md
+++ b/docs/hardware/装机.md
@@ -71,6 +71,12 @@ cpu散热器高度：<=60mm
 
 乔思伯d30：401✖️204✖️337
 
+乔思伯U1 Plus 220✖️170✖️302
+
 #### 显卡
 
 RX460 产品尺寸：217×105×37mm
+
+
+
+[RX6600xt 各非公版介绍](https://zhuanlan.zhihu.com/p/398818793)
