--- a/docs/小程序/小程序多环境配置.md
+++ b/docs/小程序/小程序多环境配置.md
@@ -47,24 +47,16 @@ const env = __wxConfig?.envVersion ?? 'release'
 
 
 ```js
+const develop = require('./.env.development')
+const test = require('./.env.test')
+const prod = require('./.env.stag')
 const envMaps = {
-  develop: {
-    BASE_URL: 'https://oa-dev.zy-health.net',
-    OA_URL: 'https://oa-test-php.zy-health.net/general',
-  },
-  trial: {
-    BASE_URL: 'https://oa-test.zy-health.net',
-    OA_URL: 'https://oa-test-php.zy-health.net/general',
-  },
-  release: {
-    BASE_URL: 'https://oa-dev.zy-health.net',
-    OA_URL: 'https://oa-test-php.zy-health.net/general',
-  },
+  develop,
+  trial: test,
+  release: prod
 }
+
 const envVersion = __wxConfig?.envVersion ?? 'release'
-
-console.log('envVersion: ', envVersion, envMaps[envVersion]);
-
 const config = envMaps[envVersion]
 
 module.exports = config
