--- a/docs/frontend/css/伪元素及伪类.md
+++ b/docs/frontend/css/伪元素及伪类.md
@@ -1,4 +1,4 @@
-### 伪元素
+## 伪元素
 
 #### ::after
 
@@ -6,7 +6,29 @@
 
 在元素后面加内容
 
+#### ::placeholder
 
+修改placehorder的样式
+
+```css
+::placeholder {
+  color: red;
+  font-size: 1.5em;
+}
+```
+
+
+
+### 伪元素占位
+
+::before和::after是通过选择器指定的元素内容的前、后添加 内容
+
+content为添加的内容
+
+```css
+/* CSS3 语法 */
+element::before { 样式 }
+```
 
 
 
