--- a/docs/hardware/装机.md
+++ b/docs/hardware/装机.md
@@ -80,3 +80,6 @@ RX460 产品尺寸：217×105×37mm
 
 
 [RX6600xt 各非公版介绍](https://zhuanlan.zhihu.com/p/398818793)
+
+[6600xt拆解](https://zhuanlan.zhihu.com/p/399457369)
+
