--- a/docs/小程序/小程序开发常见问题.md
+++ b/docs/小程序/小程序开发常见问题.md
@@ -89,6 +89,26 @@ app.wxss中的全局样式对自定义组件不生效
 
 
 
+### 小程序返回上一页刷新数据---组件刷新
+
+### iconfont报渲染层网络层错误
+
+这是因为小程序检测到文件不是静态文件
+
+修改url路径
+
+```css
+@font-face {
+  font-family: "iconfont"; /* Project id 2596464 */
+  src: url('/assets/fonts/iconfont.woff2?t=1655256364766') format('woff2'),
+       url('/assets/fonts/iconfont.woff?t=1655256364766') format('woff'),
+       url('/assets/fonts/iconfont.ttf?t=1655256364766') format('truetype'),
+       url('/assets/fonts/iconfont.svg?t=1655256364766#iconfont') format('svg');
+}
+```
+
+
+
 
 
 ## 上线后出现的问题
