--- a/docs/小程序/小程序多环境配置.md
+++ b/docs/小程序/小程序多环境配置.md
@@ -56,10 +56,15 @@ const envMaps = {
   release: prod
 }
 
-const envVersion = __wxConfig?.envVersion ?? 'release'
+// const envVersion = __wxConfig?.envVersion ?? 'release'
+const envVersion = wx.getAccountInfoSync().miniProgram.envVersion ?? 'release'
 const config = envMaps[envVersion]
 
 module.exports = config
 ```
 
 再在其他文件如`api/index.js`中导入
+
+
+
+小程序已提供正式api **wx.getAccountInfoSync()**
