--- a/docs/小程序/小程序开发常见问题.md
+++ b/docs/小程序/小程序开发常见问题.md
@@ -107,7 +107,11 @@ app.wxss中的全局样式对自定义组件不生效
 }
 ```
 
+### 真机不显示iconfont的问题
 
+https://www.jianshu.com/p/e5c38fb01dca
+
+将iconfont.woff转换成base64
 
 
 
