--- a/docs/小程序/小程序开发常见解决方案.md
+++ b/docs/小程序/小程序开发常见解决方案.md
@@ -53,12 +53,7 @@ export default function ({
   contentType = 'application/json',
   showLoading = false
 }) {
-  let urlstring = ''
-  if (contentType === 'application/x-www-form-urlencoded') {
-    // urlstring = `${baseURL}${url}?${qs.stringify(data)}`
-    urlstring = `${BASE_URL}${url}?${qs.stringify(data)}`
-  } else urlstring = `${BASE_URL}${url}`
-  // console.log('urlstring: ', urlstring);
+  let urlstring = `${BASE_URL}${url}`
   let token = ''
   try {
     token = wx.getStorageSync('token')
@@ -66,9 +61,10 @@ export default function ({
     console.log('e: ', err)
   }
   token = token && JSON.parse(token)
-  // const token = `eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJzdWIiOiIxMSIsImlhdCI6MTYzNzY1Nzk0MCwiZXhwIjoxNjM4MjYyNzQwfQ.nvTyLA9F_yKm7_9lV-eOB25YpTT5EU3_F6PR3qWAC16cvDZFUFCKkIrb2sP_QwazPvAnaKP0RaWu1DY4Q1-xnw`
-  // console.log('token: ', token)
-
+  if (contentType === 'application/x-www-form-urlencoded') {
+    data = qs.stringify(data)
+  }
+  
   return new Promise((resolve, reject) => {
     showLoading && wx.showLoading({ title: '加载中', mask: true })
     wx.request({
@@ -78,7 +74,7 @@ export default function ({
         deviceTag: 'app', // 不加deviceTag token无效
         token: token
       },
-      data: contentType === 'application/json' ? data : '',
+      data,
       method,
       success(res) {
         wx.hideLoading()
