docs: 更新@vue/composition-api的使用方法

--- a/docs/frontend/css/css布局/表格布局.md
+++ b/docs/frontend/css/css布局/表格布局.md
@@ -25,7 +25,7 @@ table {
     }
 ```
 
-### 合并边框
+### 合并边框(边框重叠问题)
 
 border-collapse
 
@@ -38,3 +38,34 @@ border-collapse: collapse;
 ## 合并单元格
 
 colspan属性
+
+rowspan属性
+
+
+
+### 嵌套表格
+
+使用scope属性
+
+ [`scope`](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/th#attr-scope) 属性，可以添加在`<th>` 元素中，用来区分这个单元格到底是列标题，还是行标题
+
+```html
+<tr>
+  <th :rowspan="4" scope="rowgroup">实验室检查</th>
+  <th scope="row">血常规</th>
+  <td :colspan="4">2</td>
+</tr>
+<tr>
+  <th scope="row">尿常规</th>
+  <td :colspan="4">2</td>
+</tr>
+<tr>
+  <th scope="row">微量元素</th>
+  <td :colspan="4">2</td>
+</tr>
+<tr>
+  <th scope="row">超声检查</th>
+  <td :colspan="4">2</td>
+</tr>
+```
+
