--- a/docs/hardware/装机.md
+++ b/docs/hardware/装机.md
@@ -4,7 +4,7 @@ MSI B550M MORTAR
 
 
 
-主板
+## 主板
 
 华硕主板分级:ROG ROG猛禽 TUF Prime
 微星主板分级:MEG MPG MAG Pro
@@ -12,6 +12,14 @@ MSI B550M MORTAR
 迫击炮和爆破弹都是MAG，迫击炮是最好的MAG，爆破弹是最差的MAG，和Pro系列一个供电。
 
 
+
+### 华硕B550M tuf重炮手
+
+BIOS Flashback按键，是华硕为更新主板BIOS设计的一个简易快捷按键，位于主板背口。
+
+您可以从官网下载指定的BIOS文件到符合要求的U盘，插到指定的USB接口上，按下Flashback键即可刷新BIOS，具体操作详见主板用户手册以及官网说明：
+
+http://event.asus.com/2012/mb/USB_BIOS_Flashback_GUIDE/
 
 ### 电脑组装故障排除-最小系统法
 
