--- a/docs/小程序/小程序开发常见问题.md
+++ b/docs/小程序/小程序开发常见问题.md
@@ -122,3 +122,10 @@ https://www.jianshu.com/p/e5c38fb01dca
 报错信息：equest:fail url not in domain list
 
 解决办法：在微信公众平台后台配置域名
+
+
+
+## button嵌套image不显示
+
+小程序open-type只有button才能生效，一次在button内放了一张image图片，在开发者工具上能够正常显示，但是到真机上就显示不出来。
+
