--- a/docs/frontend/JavaScript/运算符与逻辑/1-运算符及操作符.md
+++ b/docs/frontend/JavaScript/运算符与逻辑/1-运算符及操作符.md
@@ -40,9 +40,4 @@ in vs hasOwnProperty
 in判断的是对象的所有属性，包括对象实例及其原型的属性；
 而hasOwnProperty则是判断对象实例的是否具有某个属性。
 
-
-
-
-
-
-
+## [运算符优先级](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Operator_Precedence)
