--- a/docs/frontend/前端杂谈/前端杂谈.md
+++ b/docs/frontend/前端杂谈/前端杂谈.md
@@ -5,3 +5,11 @@
 如何避免：
 
 1. code-review很重要
+
+
+
+> React 的 virtual dom 就是那个时代的产物
+> 那个时代没有现在这么强大的工具链可以做到 Svelte 那样
+> 要兼容浏览器也没有 Proxy 来做到原生 reactive
+>
+> 有了强大的编译器和现代浏览器 确实完全不需要 virtual dom 了
