docs: virtual dom

--- a/docs/frontend/前端杂谈/开发专有名词解释.md
+++ b/docs/frontend/前端杂谈/开发专有名词解释.md
@@ -1,3 +1,7 @@
 ### 什么是BI系统？
 
 BI分析系统是一种自动化的数据管理系统。 通过多维分析和仪表盘的结合，可以快速获取数据，让决策者知道哪些项目有问题，哪些原因。
+
+### Shim和Polyfill
+
+Shim 指的是在一个旧的环境中模拟出一个新 API ，而且仅靠旧环境中已有的手段实现，以便所有的浏览器具有相同的行为。
