--- a/docs/frontend/面试/1.md
+++ b/docs/frontend/面试/1.md
@@ -3,3 +3,21 @@ title: tree-shaking
 ---
 
 ### tree-shaking
+
+https://juejin.cn/post/7004297344300777502
+
+Tree-shaking只支持ESM的引入方式，不支持 Common JS 的引入方式。
+
+- ESM: export + import
+- Common JS: module.exports + require
+
+```js
+import { add } from 'lodash'	// 不支持
+import { add } from 'lodash-es' // 支持
+```
+
+原因是lodash是module.exports 导出的
+
+
+
+<img src="/Users/cheng/Library/Application Support/typora-user-images/image-20220810100605663.png" alt="image-20220810100605663" style="zoom:70%;" />
