--- a/docs/frontend/CSS/CSS布局/元素.md
+++ b/docs/frontend/CSS/CSS布局/元素.md
@@ -7,3 +7,16 @@
 
 
 ### margin-left: auto为什么可以使元素靠右
+
+一个元素满足等式：
+
+'margin-left' + 'border-left-width' + 'padding-left' + 'width' + 'padding-right' + 'border-right-width' + 'margin-right' = width of containing block
+
+ containing block为包含块
+
+### 什么是包含块
+
+[mdn](https://developer.mozilla.org/zh-CN/docs/Web/CSS/Containing_block)的解释是
+
+> 一个元素的尺寸和位置经常受其**包含块 (containing block)**的影响。大多数情况下，包含块就是这个元素最近的祖先[块元素](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Block-level_elements)的[内容区](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Box_Model/Introduction_to_the_CSS_box_model#content-area)，但也不是总是这样。
+
