--- a/docs/frontend/css/css布局/浮动定位与文档流.md
+++ b/docs/frontend/css/css布局/浮动定位与文档流.md
@@ -81,11 +81,11 @@ flow-root 会创建一个块级格式化上下文。
 
 **display: flow-root 之前**
 
-<img src="/Users/cheng/Library/Application Support/typora-user-images/image-20210923143355859.png" alt="image-20210923143355859" style="zoom:67%;" />
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20210923143355859.png" alt="image-20210923143355859" style="zoom:67%;" />
 
 **display: flow-root 之后**
 
-<img src="/Users/cheng/Library/Application Support/typora-user-images/image-20210923143300435.png" alt="image-20210923143300435" style="zoom: 67%;" />
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20210923143300435.png" alt="image-20210923143300435" style="zoom: 67%;" />
 
 上面的元素盒子123 `float: left`，在给盒子456设置flow-root之前，456会覆盖住123。
 
