--- a/docs/小程序/小程序开发常见解决方案.md
+++ b/docs/小程序/小程序开发常见解决方案.md
@@ -4,6 +4,33 @@ title: 小程序常见解决方案
 
 
 
+
+
+## 小程序动态class
+
+思路：定义一个变量，标签上传递一个data-xxx的变量，点击时修改该变量的值为传递过来的值。
+
+这样class中再通过判断添加active类
+
+```vue
+<view class="flex p-4">
+  <view class="card-item {{hasException==='0' ? 'active' : ''}}" data-has-exception="0" bind:tap="selectTap">无异常</view>
+  <view class="card-item {{hasException==='1' ? 'active' : ''}}" data-has-exception="1" bind:tap="selectTap">有异常</view>
+</view>
+
+selectTap() {
+	const { hasException } = e.target.dataset
+  // hasException = '1' 有异常  '0' 无异常
+  this.setData({
+    hasException: hasException
+  })
+}
+```
+
+
+
+
+
 ## 动态样式
 
 小程序的属性不支持绑定函数或者computed之类的，并且不能传参。
