--- a/docs/frontend/JavaScript/运算符与逻辑/3-相等性判断与隐式转换.md
+++ b/docs/frontend/JavaScript/运算符与逻辑/3-相等性判断与隐式转换.md
@@ -83,6 +83,8 @@ includes内部使用的比较算法就是**SameValueZero**。
 
 ## 类型转换
 
+[深入浅出弱类型JS的隐式转换](https://github.com/jawil/blog/issues/5#)
+
 ### Number转Boolean
 
 ```js
