--- a/docs/frontend/css/文本渲染/文本溢出及换行.md
+++ b/docs/frontend/css/文本渲染/文本溢出及换行.md
@@ -4,7 +4,7 @@ title: 文本溢出及换行问题
 
 ## text-overflow
 
-**`text-overflow`** [CSS](https://developer.mozilla.org/en-US/docs/Web/CSS) 属性确定如何向用户发出未显示的溢出内容信号。它可以被剪切，显示一个省略号（'...'，U + 2026 HORIZONTAL ELLIPSIS）或显示一个自定义字符串。
+**`text-overflow`** [CSS](https://developer.mozilla.org/zh-CN/docs/Web/CSS/text-overflow) 属性确定如何向用户发出未显示的溢出内容信号。它可以被剪切，显示一个省略号（'...'，U + 2026 HORIZONTAL ELLIPSIS）或显示一个自定义字符串。
 
 > 这个属性并不会强制“溢出”事件的发生，因此为了能让"text-overflow"能够生效，程序员们必须要在元素上添加几个额外的属性，比如"将[`overflow`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/overflow) 设置为hidden"。
 
