--- a/docs/小程序/小程序开发常见解决方案.md
+++ b/docs/小程序/小程序开发常见解决方案.md
@@ -218,3 +218,93 @@ In app.json
 }
 ```
 
+
+
+## api封装
+
+```js
+const config = require('../config/index')
+import qs from 'querystring'
+const BASE_URL = config.BASE_URL
+/**
+ * @description: 发起请求
+ * @param {object} Obj
+ * @param {string} Obj.url
+ * @param {any} Obj.data
+ * @param {string} Obj.method
+ * @param {string} Obj.contentType
+ * @param {boolean} Obj.showLoading default=>false
+ * @return {*}
+ */
+export default function ({
+  url,
+  data,
+  method,
+  contentType = 'application/json',
+  showLoading = false
+}) {
+  let urlstring = ''
+  // 表单查询
+  if (contentType === 'application/x-www-form-urlencoded') {
+    urlstring = `${BASE_URL}${url}?${qs.stringify(data)}`
+  } else urlstring = `${BASE_URL}${url}`
+  // console.log('urlstring: ', urlstring);
+  let token = ''
+  try {
+    token = wx.getStorageSync('token')
+  } catch (err) {
+    console.log('获取token失败: ', err)
+  }
+  token = token && JSON.parse(token)
+  // const token = `eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJzdWIiOiIxMSIsImlhdCI6MTYzNzY1Nzk0MCwiZXhwIjoxNjM4MjYyNzQwfQ.nvTyLA9F_yKm7_9lV-eOB25YpTT5EU3_F6PR3qWAC16cvDZFUFCKkIrb2sP_QwazPvAnaKP0RaWu1DY4Q1-xnw`
+  // console.log('token: ', token)
+
+  return new Promise((resolve, reject) => {
+    showLoading && wx.showLoading({ title: '加载中', mask: true })
+    wx.request({
+      url: urlstring,
+      header: {
+        'content-type': contentType,
+        deviceTag: 'app', // 不加deviceTag token无效
+        token: token
+      },
+      data: contentType === 'application/json' ? data : '',
+      method,
+      success(res) {
+        wx.hideLoading()
+        if (res.data.code === 200) {
+          resolve(res)
+        } else if (res.data.code === 404 || res.data.code === 500) {
+          wx.showModal({
+            title: '提示',
+            content: res.data.msg || '网络错误，请稍后重试',
+            showCancel: false
+          })
+        } else if (res.data.code === 100001) {
+          wx.showModal({
+            title: '提示',
+            content: '登录失效，请重新登录',
+            showCancel: false,
+            success() {
+              wx.redirectTo({ url: '/pages/login/index' })
+            }
+          })
+        } else if (res.data.code === 100002 || res.data.code === 100004) {
+          wx.showModal({
+            title: '提示',
+            content: '请先登录',
+            showCancel: false,
+            success() {
+              wx.redirectTo({ url: '/pages/login/index' })
+            }
+          })
+        }
+      },
+      fail(err) {
+        reject(err)
+      }
+    })
+  })
+}
+```
+
