--- a/docs/frontend/CSS/CSS布局/表格布局.md
+++ b/docs/frontend/CSS/CSS布局/表格布局.md
@@ -188,3 +188,10 @@ rowspan属性
 
 
 
+### table-layout的作用
+
+​		当不设置table-layout，即table-layout默认auto时，如果单元格内容超出了我们设置的宽度，会将单元格撑开，而这时宽度不再是我们设置的宽度了。
+
+​		而设置了table-layout: fixed; 后，单元格宽度固定为我们设置的宽度，如果内容超出，并不会拉长单元格。
+
+会遮盖住后续单元格的内容。
