--- a/docs/frontend/CSS/CSS布局/表格布局.md
+++ b/docs/frontend/CSS/CSS布局/表格布局.md
@@ -195,3 +195,43 @@ rowspan属性
 ​		而设置了table-layout: fixed; 后，单元格宽度固定为我们设置的宽度，如果内容超出，并不会拉长单元格。
 
 会遮盖住后续单元格的内容。
+
+
+
+## 固定表头
+
+给表格第一列设置`position: sticky;`，同时表格单元格必须是固定宽度，可以设置min-width
+
+table不能再是宽度100%了。注意固定的单元格需要设置z-index
+
+```css
+table {
+        /* width: 100%; */
+        border: 1px solid #d7d7d7;
+        border-collapse: collapse;
+        table-layout: fixed;
+        position: relative;
+      }
+th,
+      td {
+        min-width: 800px;
+        border: 1px solid #d7d7d7;
+        border-collapse: collapse;
+      }
+      tr th:first-child,
+      td:first-child {
+        position: sticky;
+        left: 0;
+        background-color: salmon;
+      }
+```
+
+
+
+### table min-height不生效
+
+对于**table**元素，如**th**、**td**来说，
+
+使用**height**属性就等效于**min-height**属性了，
+
+如果表格内容高度大于所设定的高度值，表格会自己扩大高度以适应内容的
