--- a/docs/frontend/JavaScript/运算符与逻辑/4-原型链与继承.md
+++ b/docs/frontend/JavaScript/运算符与逻辑/4-原型链与继承.md
@@ -28,7 +28,7 @@ title: 原型链与继承
 
 ### 什么是原型链
 
-原型链是一种机制,指的是JavaScript每个对象包括原型对象都有一个内置的`__proto__`属性指向创建它的函数对象的原型对象,即prototype属性.
+原型链是一种机制,指的是JavaScript实例对象（object）包括原型对象都有一个内置的`__proto__`属性指向创建它的构造函数的原型对象,即prototype属性.
 
 ![](https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20200608133124144.png)
 
