--- a/docs/frontend/CSS/CSS布局/表格布局.md
+++ b/docs/frontend/CSS/CSS布局/表格布局.md
@@ -235,3 +235,40 @@ th,
 使用**height**属性就等效于**min-height**属性了，
 
 如果表格内容高度大于所设定的高度值，表格会自己扩大高度以适应内容的
+
+
+
+### 表格边框粗细不一致的问题
+
+在Chrome90以上的版本原生table出现部分边框大小不一致的情况。
+
+css如下
+
+```css
+table {
+  border: 1px solid #d7d7d7;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+th,
+td {
+  border: 1px solid #d7d7d7;
+  border-collapse: collapse;
+}
+```
+
+**原因：**由border-collapse引起的
+
+**解决办法：**
+
+修改为border-collapse: separate;并且去除掉th td的border
+
+```css
+table {
+  border-collapse: separate;
+  border-spacing: 1px;
+  background-color: #d7d7d7;
+  table-layout: fixed;
+}
+```
+
