--- a/docs/frontend/JavaScript/运算符与逻辑/3-相等性判断与隐式转换.md
+++ b/docs/frontend/JavaScript/运算符与逻辑/3-相等性判断与隐式转换.md
@@ -29,7 +29,7 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Equality_comparisons_and
 undefined === null // false
 obj === undefined // false
 obj === null // false
-NaN === NaN; // true
+NaN === NaN; // false
 +0 === -0 // true
 ```
 
