--- a/docs/frontend/CSS/文本渲染/文本溢出及换行.md
+++ b/docs/frontend/CSS/文本渲染/文本溢出及换行.md
@@ -44,7 +44,7 @@ title: 文本溢出及换行问题
 
 ## white-space
 
-https://developer.mozilla.org/zh-CN/docs/Web/CSS/white-space
+[https://developer.mozilla.org/zh-CN/docs/Web/CSS/white-space](https://developer.mozilla.org/zh-CN/docs/Web/CSS/white-space)
 
 **`white-space`** CSS 属性是用来设置如何处理元素中的 [空白 ](https://developer.mozilla.org/en-US/docs/Glossary/Whitespace)
 
@@ -73,6 +73,10 @@ https://developer.mozilla.org/zh-CN/docs/Web/CSS/white-space
   比pre多出一个文字溢出时会自动换行的行为
 
   <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/20220425120741.png" style="zoom:67%;" />
+  
+- **pre-line**
+
+  
 
 tailwindcss
 
