--- a/docs/frontend/CSS/行高.md
+++ b/docs/frontend/CSS/行高.md
@@ -4,7 +4,7 @@ title: css行高
 
 
 
-https://www.cnblogs.com/dolphinX/p/3236686.html
+[https://www.cnblogs.com/dolphinX/p/3236686.html](https://www.cnblogs.com/dolphinX/p/3236686.html)
 
 [MDN](https://developer.mozilla.org/zh-CN/docs/Web/CSS/line-height)
 
@@ -21,11 +21,14 @@ https://www.cnblogs.com/dolphinX/p/3236686.html
 
 文字渲染的高度并不等于font-size的大小，与字体设计有关。
 
-#### 行高
+### 什么是行高？
 
 行高是指上下文本行的**基线**间的垂直距离，即图中两条红线间垂直距离。
 
 行距是指一行底线到下一行顶线的垂直距离，即第一行粉线和第二行绿线间的垂直距离。
+
+
+### 行高居中的原理
 
 
 
@@ -37,7 +40,7 @@ https://www.cnblogs.com/dolphinX/p/3236686.html
 
 
 
-### lineheight单位
+### line-height单位
 
 https://blog.51cto.com/u_15328720/3412507
 
