--- a/docs/小程序/小程序开发常见问题.md
+++ b/docs/小程序/小程序开发常见问题.md
@@ -129,3 +129,43 @@ https://www.jianshu.com/p/e5c38fb01dca
 
 小程序open-type只有button才能生效，一次在button内放了一张image图片，在开发者工具上能够正常显示，但是到真机上就显示不出来。
 
+
+
+## 小程序横向滚动问题
+
+```vue
+<view class="wrapper">
+    <view >患者姓名dsadas</view>
+    <view >患者姓名dsadas</view>
+    <view >患者姓名dsadas</view>
+    <view >患者姓名dsadas</view>
+  </view>
+```
+
+给外部容器wrapper设置overflow-x: scroll;后还需要设置white-space: nowrap; 否则内容会自动换行。
+
+这是小程序view与div的不同之处
+
+```vue
+<scroll-view class="wrapper" scroll-x="{{true}}" enable-flex="{{true}}">
+  <view class="wrapper1-header">
+    <view class="wrapper-item">患者姓名123</view>
+    <view class="wrapper-item">患者姓名123</view>
+    <view class="wrapper-item">患者姓名123</view>
+    <view class="wrapper-item">患者姓名123</view>
+  </view>
+</scroll-view>
+```
+
+这里可以用scroll-view，如果直接用view，那么需要给wrapper设置overflow-x: scroll; 
+
+### 小程序阻止事件冒泡
+
+在浏览器中可以通过stopPropagation() 来阻止事件冒泡，但在小程序中这是不可行的。
+
+[原文链接](https://developers.weixin.qq.com/miniprogram/dev/framework/view/wxml/event.html#%E7%BB%91%E5%AE%9A%E5%B9%B6%E9%98%BB%E6%AD%A2%E4%BA%8B%E4%BB%B6%E5%86%92%E6%B3%A1)
+
+> **绑定并阻止事件冒泡**
+>
+> 除 `bind` 外，也可以用 `catch` 来绑定事件。与 `bind` 不同， `catch` 会阻止事件向上冒泡。
+
