--- a/docs/frontend/JavaScript/1/作用域与闭包.md
+++ b/docs/frontend/JavaScript/1/作用域与闭包.md
@@ -53,6 +53,19 @@ class、let定义的即便是全局对象，但不是顶层对象的属性，在
 
 简单来说,闭包就是指**能够访问其它函数内部变量的函数**
 
+```js
+function getDate() {
+  let date = 129;
+  function getToday() {
+    console.log("today is" + date);
+  }
+  return getToday();
+}
+
+getDate();
+// getToday就是闭包
+```
+
 ```
 闭包是个函数，而它「记住了周围发生了什么」。表现为由「一个函数」体中定义了「另个函数」
 ```
