--- a/docs/frontend/CSS/1-文本渲染/文本溢出及换行.md
+++ b/docs/frontend/CSS/1-文本渲染/文本溢出及换行.md
@@ -50,9 +50,11 @@ title: 文本溢出及换行问题
 
 - **nowrap**
 
+  文本不换行，文字在一行上持续渲染。直到遇到br标签
+
   和 normal 一样，连续的空白符会被合并。但文本内的换行无效。
 
-  文本不会换行，文本会在在同一行上继续，直到遇到 br 标签为止
+  
 
   **文本内的空格会渲染，\n不会渲染，文字可以溢出元素**
 
