--- a/docs/frontend/JavaScript/1/2-作用域与闭包.md
+++ b/docs/frontend/JavaScript/1/2-作用域与闭包.md
@@ -74,3 +74,26 @@ getDate();
 
 ![image-20200609092422638](https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20200609092422638.png)
 
+### 闭包的用途
+
+1.数据缓存
+
+看以下一个题目
+
+```js
+var data = [];
+
+for (var i = 0; i < 3; i++) {
+  data[i] = function () {
+    console.log(i);
+  };
+}
+
+data[0]();
+data[1]();
+data[2]();
+```
+
+答案是都是3
+
+很明显，闭包缓存了状态
