--- a/docs/frontend/vue/数据双向绑定/数据双向绑定.md
+++ b/docs/frontend/vue/数据双向绑定/数据双向绑定.md
@@ -1,4 +1,6 @@
-## Object.definProperty()
+# 响应式原理
+
+## Object.definProperty
 
 #### 描述符可拥有的键值
 
@@ -10,6 +12,8 @@
 > 如果一个描述符不具有 `value`、`writable`、`get` 和 `set` 中的任意一个键，那么它将被认为是一个数据描述符。如果一个描述符同时拥有 `value` 或 `writable` 和 `get` 或 `set` 键，则会产生一个异常。
 
 即一个描述符不可同时拥有`value` 或 `writable` 和 `get` 或 `set` 键（不可同时拥有数据描述符和存取描述符）
+
+即一个描述符要么有value和writable属性，要么有get和set属性。
 
 ```js
 const data = {}
