--- a/docs/frontend/JavaScript/1/2-作用域与闭包.md
+++ b/docs/frontend/JavaScript/1/2-作用域与闭包.md
@@ -53,6 +53,10 @@ class、let定义的即便是全局对象，但不是顶层对象的属性，在
 
 简单来说,闭包就是指**能够访问其它函数内部变量的函数**
 
+闭包是个函数，而它「记住了周围发生了什么」。表现为由「一个函数」体中定义了「另个函数」
+
+闭包就是有状态的函数对象
+
 ```js
 function getDate() {
   let date = 129;
@@ -66,9 +70,9 @@ getDate();
 // getToday就是闭包
 ```
 
-```
-闭包是个函数，而它「记住了周围发生了什么」。表现为由「一个函数」体中定义了「另个函数」
-```
+Chrome debug 工具中可以查看闭包
+
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20230208163729388.png" alt="image-20230208163729388" style="zoom:50%;" />
 
 使用闭包的注意点
 
@@ -97,3 +101,4 @@ data[2]();
 答案是都是3
 
 很明显，闭包缓存了状态
+
