--- a/docs/frontend/JavaScript/1/2-作用域与闭包.md
+++ b/docs/frontend/JavaScript/1/2-作用域与闭包.md
@@ -78,6 +78,47 @@ Chrome debug 工具中可以查看闭包
 
 ![image-20200609092422638](https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20200609092422638.png)
 
+### 闭包为什么会造成内存泄漏
+
+先看一段代码
+
+```js
+function printNumber() {
+  let num = 0;
+  debugger;
+  return function () {
+    for (let i = 0; i < 10; i++) {
+      num++;
+    }
+    debugger;
+    console.log(num);
+  };
+}
+
+var printer = printNumber();
+debugger;
+printer();
+debugger;
+printer();
+```
+
+执行结果是10、20
+
+这里产生闭包的原因是printNumber返回了一个函数printer，printer内引用了num，而在两次printer之间闭包（即printer）还存在，num被保存了；
+
+最后当整个程序执行完毕后，gc回收机制执行，闭包被回收，内存被释放。
+
+### 关于JavaScript的GC回收机制
+
+JavaScript 引擎基础 GC 方案是（simple GC）：mark and sweep（标记清除），即：
+
+- 遍历所有可访问的对象。
+- 回收已不可访问的对象。
+
+浏览器的 Javascript 具有自动垃圾回收机制(GC:Garbage Collecation)，也就是说，执行环境会负责管理代码执行过程中使用的内存。其原理是：**垃圾收集器会定期（周期性）找出那些不在继续使用的变量，然后释放其内存**。但是这个过程不是实时的，因为其开销比较大并且GC时停止响应其他操作，所以垃圾回收器会按照固定的时间间隔周期性的执行。
+
+详见[这篇文章](https://juejin.cn/post/6844903828102316045)
+
 ### 闭包的用途
 
 1.数据缓存
