--- a/docs/frontend/vue/Vue学习/7-数据双向绑定与响应式.md
+++ b/docs/frontend/vue/Vue学习/7-数据双向绑定与响应式.md
@@ -1,4 +1,4 @@
-# 响应式原理
+# 数据双向绑定与响应式
 
 ## Object.definProperty
 
@@ -51,19 +51,32 @@ console.log(data.name)
 // ls
 ```
 
-双向绑定 <===> 数据和视图同步
 
-1. 视图改变，数据同步
-2. 数据改变，视图同步
 
-第一个，通过事件监听很容易实现
+## 双向绑定MVVM
 
-第二个需要解决几个问题：
+- 数据层（Model）：应用的数据及业务逻辑
+- 视图层（View）：应用的展示效果，各类UI组件
+- 业务逻辑层（ViewModel）：框架封装的核心，它负责将数据与视图关联起来
+
+### 理解ViewModel
+
+它的主要职责就是：
+
+- 数据变化后更新数据
+- 视图变化后更新数据
+
+第一点通过事件监听很容易实现
+
+第二点需要解决几个问题：
 
 1. 当数据改变时，视图如何知道数据发生了改变
 2. 数据改变时，我们如何知道应该更新哪个视图的数据 这里我们通过**订阅发布**模式来解决这个问题
 
-![](https://user-gold-cdn.xitu.io/2020/3/7/170b3f4e4eb01544)
+此外，它还有两个主要部分组成
+
+- 监听器（Observer）：对所有数据的属性进行监听
+- 解析器（Compiler）：对每个元素节点的指令进行扫描跟解析，根据指令模板替换数据，以及绑定相应的更新函数
 
 ## 实现观察者Observer
 
