--- a/docs/frontend/JavaScript/1/7-同步异步与宏任务微任务.md
+++ b/docs/frontend/JavaScript/1/7-同步异步与宏任务微任务.md
@@ -1,6 +1,6 @@
-# 宏任务、微任务、同步任务、异步任务与Event Loop
+# 同步和异步与宏任务和微任务
 
-### Event Loop(事件轮询)
+## Event Loop(事件轮询)
 
 ```wiki
 "Event Loop是一个程序结构，用于等待和发送消息和事件。（a programming construct that waits for and dispatches events or messages in a program.）"
@@ -10,15 +10,19 @@
 
 ## 同步和异步
 
-- 同步: 程序执行过程中,上一个任务结束立即执行下一个任务,执行的顺序和代码的顺序一致。
+什么是同步，什么是异步？
 
-console.log() 就是一个同步任务
+- 同步：程序执行过程中,上一个任务结束立即执行下一个任务,执行的顺序和代码的顺序一致。
 
-- 异步: 程序执行过程中,上一个任务执行结束立即执行回调函数,下一个任务不用等到上一个任务执行完成再执行,执行的顺序和代码书写的顺序有些差异。
+- 异步：程序执行过程中,上一个任务执行结束立即执行回调函数,下一个任务不用等到上一个任务执行完成再执行,执行的顺序和代码书写的顺序有些差异。
+
+console.log就是一个同步任务，
+
+而常见的异步任务: Ajax,DOM事件操作,setTimeout,Promise的then方法,node读取文件
 
 [**异步简介**](https://developer.mozilla.org/zh-CN/docs/learn/JavaScript/%E5%BC%82%E6%AD%A5/%E7%AE%80%E4%BB%8B)
 
-常见的异步任务: Ajax,DOM事件操作,setTimeout,Promise的then方法,node读取文件
+
 
 ### 异步的三种实现方式
 
@@ -42,8 +46,6 @@ console.log() 就是一个同步任务
 ## 宏任务(task)和微任务(Microtasks)
 
 宏任务和微任务都是异步任务,它们都属于一个队列，主要区别在于他们的执行顺序，Event Loop的走向和取值。
-
-<img src="https://user-gold-cdn.xitu.io/2018/7/14/164974fa4b42e4af?imageView2/0/w/1280/h/960/format/webp/ignore-error/1" alt="cmd-markdown-logo" style="zoom:80%;" />
 
 ### 宏任务
 
@@ -71,8 +73,6 @@ console.log() 就是一个同步任务
 
 **事件队列**是一个存储库，在此存储来自应用程序的事件，然后再由接收程序或系统对其进行处理。
 事件队列通常在企业消息传递系统的上下文中使用。
-
-<img src="https://user-gold-cdn.xitu.io/2018/7/14/164974fb89da87c5?imageView2/0/w/1280/h/960/format/webp/ignore-error/1" alt="cmd-markdown-logo" style="zoom:80%;" />
 
 - 同步和异步任务分别进入不同的执行"场所"，同步的进入主线程，异步的进入Event Table并注册函数
 - 当指定的事情完成时，Event Table会将这个函数移入Event Queue。
