--- a/docs/frontend/JavaScript/Promise/1.深入理解Promise.md
+++ b/docs/frontend/JavaScript/Promise/1.深入理解Promise.md
@@ -50,7 +50,7 @@ resolve和reject是两个回调函数
 
 
 
-### then-catch
+## then-catch
 
 [then方法](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise/then)
 
@@ -101,7 +101,7 @@ catch实际上是then的语法糖,mdn关于catch的解释
 
 
 
-#### then vs then catch
+### then vs then catch
 
 ```js
 myPromise.then(function() {
@@ -157,7 +157,7 @@ someAsyncThing()
 
 上面代码运行完`catch()`方法指定的回调函数，会接着运行后面那个`then()`方法指定的回调函数。如果没有报错，则会跳过`catch()`方法。
 
-#### 错误处理
+## 使用Promise进行错误处理
 
 [使用 promise 进行错误处理](https://zh.javascript.info/promise-error-handling)
 
@@ -224,6 +224,8 @@ runAsync(1)
    3  */
 ```
 
+## Promise的Api
+
 ### Promise.all
 
 ```js
@@ -270,7 +272,7 @@ Promise.allSettled([pm2, pm1, pm2, makePromise(5000)])
 
 相比之下，`Promise.all()` 更适合彼此相互依赖或者在其中任何一个`reject`时立即结束。
 
-### Promise 防止阻塞
+## Promise 防止阻塞
 
 **Promise** 对象用于表示一个异步操作的最终完成 (或失败), 及其结果值.
 
@@ -314,7 +316,7 @@ timeTest().then(() => {
 
 对应的[async await版本](../async-await语法糖)
 
-### Promise的执行顺序
+## Promise的执行顺序
 
 Mdn：https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Using_promises
 
