--- a/docs/小程序/小程序开发常见解决方案.md
+++ b/docs/小程序/小程序开发常见解决方案.md
@@ -308,3 +308,30 @@ export default function ({
 }
 ```
 
+
+
+## 获取定位
+
+小程序获取定位重点有两条：
+
+- 通过微信小程序api: wx.getLocation获取当前所在的经纬度
+- 通过经纬度在腾讯开放平台地图上显示位置
+
+### wx.getLocation
+
+```js
+wx.getLocation({
+      type: 'gcj02'
+    }).then(res => {
+      console.log('success', res)
+      const { latitude, longitude } = res
+
+      wx.openLocation({
+        latitude,
+        longitude,
+      })
+    }).catch(err => {
+      console.log('error', err)
+    })
+```
+
