--- a/docs/frontend/CSS/3-CSS布局/1-浮动与定位.md
+++ b/docs/frontend/CSS/3-CSS布局/1-浮动与定位.md
@@ -4,6 +4,8 @@ title: 浮动与定位
 
 ## 什么是浮动?
 
+要了解浮动之前，我们首先需要了解什么是文档流。
+
 [float深度理解](https://segmentfault.com/a/1190000021201257)
 
 [参考链接](https://segmentfault.com/a/1190000012805545)
