--- a/docs/frontend/React/1.React学习/3.1-React-Router.md
+++ b/docs/frontend/React/1.React学习/3.1-React-Router.md
@@ -272,3 +272,28 @@ function SendInvoice() {
 }
 ```
 
+
+
+
+
+## history库push方法如何实现的
+
+```ts
+function push(path, state) {
+  const location = { ...this.location, state };
+  const action = 'PUSH';
+  const pathName = typeof path === 'object' ? path.pathname : path;
+  const url = createUrl(this.createHashHistory ? '#' : '', pathName, state);
+
+  this.entries.push(location);
+  this.index++;
+  this.location = location;
+  this._updateUrl(url);
+
+  const event = new PopStateEvent('popstate', { state });
+  window.dispatchEvent(event);
+
+  this._invokeListeners(this.listeners, action, location);
+}
+```
+
