--- a/docs/frontend/React/1.React学习/1.1-React组件通信.md
+++ b/docs/frontend/React/1.React学习/1.1-React组件通信.md
@@ -122,6 +122,103 @@ function Child() {
 }
 ```
 
+## context作为全局状态以及修改context
+
+context可以用来作为全局状态，不过context本身是只读的。
+
+不过我们可以通过Context.Provider 的value属性来达到修改context的目的， value 属性是用来传递一个值给所有被这个 Context 包裹的组件的。
+
+```tsx
+export const CountContext = createContext({ count: 0 })
+export default function App() {
+  const [count, setCount] = useState(0)
+  
+  return (
+    <CountContext.Provider value={{ count }}>
+    	<Topics />
+    </CountContext.Provider>
+  )
+}
+
+// in Topics
+import { CountContext } from './App'
+
+const Topics: React.FC = () => {
+  return <CountContext.Consumer>{(ctx) => ctx.count}</CountContext.Consumer>
+}
+
+// 或者使用useContext
+const Topics: React.FC = () => {
+  const ctx = useContext(CountContext)
+  return <h3>{ctx.count}</h3>
+}
+```
+
+如果想在子组件内修改context，可以传一个方法用于修改
+
+```tsx
+export default function App() {
+  const context = useContext(CountContext)
+  const [count, setCount] = useState(context.count)
+  context.incrementCount = () => {
+    setCount(count + 1)
+  }
+  
+  return (
+    <CountContext.Provider value={{ count, incrementCount }}>
+    	<Topics />
+    </CountContext.Provider>
+  )
+}
+```
+
+
+
+### 通过useReducer来配合Context
+
+```tsx
+interface State {
+  count: number
+}
+type Action = { type: 'increment' } | { type: 'decrement' } | { type: 'reset' }
+interface ContextType {
+  state: State
+  dispatch: React.Dispatch<Action>
+}
+
+export const MyContext = createContext<ContextType>({
+  state: { count: 0 },
+  dispatch: () => {}
+})
+const myReducer = (state: State, action: Action) => {
+  switch (action.type) {
+    case 'increment':
+      return { count: state.count + 1 }
+  }
+}
+export default function App() {
+  const [state, dispatch] = useReducer(myReducer, { count: 100 })
+  return (
+  	<MyContext.Provider value={{ state, dispatch }}>
+      <About />
+    </MyContext.Provider>
+  )
+}
+
+// in About
+const About: React.FC = () => {
+  const {state,dispatch} = useContext(MyContext)
+  console.log('ctx: ', ctx)
+  // return <CountContext.Consumer>{(ctx) => ctx.count}</CountContext.Consumer>
+  return (
+    <>
+      <button onClick={() => dispatch({ type: 'increment' })}>reducer</button>
+      <h3>{state.count}</h3>
+    </>
+  )
+}
+```
+
 
 
 
