--- a/docs/frontend/React/1.React学习/1.1-React组件通信.md
+++ b/docs/frontend/React/1.React学习/1.1-React组件通信.md
@@ -29,28 +29,46 @@ class MiddleComponent extends React.Component {
 >
 > Provider 接收一个 `value` 属性，传递给消费组件。一个 Provider 可以和多个消费组件有对应关系。多个 Provider 也可以嵌套使用，里层的会覆盖外层的数据。
 
-```jsx
-const MyContext = React.createContext('defaultValue');
-class Main extends React.Component {
-  constructor() {
-    super();
-    this.state = {
-      name: 'le',
-      site: 'code'
-    };
-  }
-  render() {
-    return (
-      <div>
-        <MyContext.Provider value={'123'}>
-            <MyContext.Consumer>{(value) => value}</MyContext.Consumer>
-          </Name>
-        </MyContext.Provider>
-      </div>
-    );
-  }
+```tsx
+interface ThemeContext {
+  color: 'red' | 'blue'
+}
+
+export const themeContext: Context<ThemeContext> = createContext<ThemeContext>({
+  color: 'red'
+})
+
+export default function App() {
+  return (
+  	<themeContext.Provider value={{ color: 'blue' }}>
+        <Topics />
+    </themeContext.Provider>
+  )
+}
+
+// in Topic
+import { themeContext } from './App'
+
+const Topics: React.FC = () => {
+  return <themeContext.Consumer>
+    {({ color }) => <h3>{color}</h3>}
+  </themeContext.Consumer>
 }
 ```
+
+使用useContext能够更简单
+
+```tsx
+import { useContext } from 'react'
+import { themeContext } from './App'
+
+const Topics: React.FC = () => {
+  const theme = useContext(themeContext)
+  return <h3>{theme.color}</h3>
+}
+```
+
+
 
 **App.jsx**
 
