--- a/docs/frontend/React/1.React学习/3.1-React-Router.md
+++ b/docs/frontend/React/1.React学习/3.1-React-Router.md
@@ -86,6 +86,35 @@ export default function App() {
 
 
 
+## Router组件
+
+BrowserRouter和HashRouter都是Router组件
+
+```tsx
+function Router(props) {
+  const computeRootMatch = (pathname) => { path: "/", url: "/", params: {}, isExact: pathname === "/" };
+  const location = props.history.location;
+  
+  return (
+		<RouterContext.Provider
+        value={{
+          history: props.history,
+          location: location,
+          match: Router.computeRootMatch(state.location.pathname),
+          staticContext: props.staticContext
+        }}
+      >
+        <HistoryContext.Provider
+          children={props.children || null}
+          value={props.history}
+        />
+      </RouterContext.Provider>
+  )
+}
+```
+
+
+
 ## React-Router 5 Route组件源码
 
 以下是Route组件核心实现
