--- a/docs/frontend/RegExp/常用正则表达式.md
+++ b/docs/frontend/RegExp/常用正则表达式.md
@@ -12,3 +12,11 @@ https://learnku.com/articles/31543
 /^1(3\d|4[5-9]|5[0-35-9]|6[2567]|7[0-8]|8\d|9[0-35-9])\d{8}$/
 ```
 
+### 密码
+
+密码可以输入英文字母、数字、特殊字符，不可输入空格，密码长度为8位以上
+
+```js
+/^[a-zA-Z0-9!@#$%^&*()_+,\-./:;<=>?@[\\\]^_`{|}~]{8,}$/
+```
+
