--- a/docs/frontend/JavaScript/RegExp/正则表达式.md
+++ b/docs/frontend/JavaScript/RegExp/正则表达式.md
@@ -1,31 +1,10 @@
-<!-- START doctoc generated TOC please keep comment here to allow auto update -->
-<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
-
-- [语法](#%E8%AF%AD%E6%B3%95)
-    - [正向先行断言(?=pattern)](#%E6%AD%A3%E5%90%91%E5%85%88%E8%A1%8C%E6%96%AD%E8%A8%80pattern)
-    - [正向后行断言(?<=pattern)](#%E6%AD%A3%E5%90%91%E5%90%8E%E8%A1%8C%E6%96%AD%E8%A8%80pattern)
-    - [负向先行断言(?!pattern) / 正向否定查找](#%E8%B4%9F%E5%90%91%E5%85%88%E8%A1%8C%E6%96%AD%E8%A8%80pattern--%E6%AD%A3%E5%90%91%E5%90%A6%E5%AE%9A%E6%9F%A5%E6%89%BE)
-    - [负向后行断言(?<!pattern) / 负向否定查找](#%E8%B4%9F%E5%90%91%E5%90%8E%E8%A1%8C%E6%96%AD%E8%A8%80pattern--%E8%B4%9F%E5%90%91%E5%90%A6%E5%AE%9A%E6%9F%A5%E6%89%BE)
-- [捕获组](#%E6%8D%95%E8%8E%B7%E7%BB%84)
-
-<!-- END doctoc generated TOC please keep comment here to allow auto update -->
-
-正则:
+# RegExp
 
 https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Regular_Expressions
 
-RegExp
-
 https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/RegExp
 
-replace 用法:
-
-[https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/replace#%E6%8C%87%E5%AE%9A%E4%B8%80%E4%B8%AA%E5%87%BD%E6%95%B0%E4%BD%9C%E4%B8%BA%E5%8F%82%E6%95%B0](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/replace#指定一个函数作为参数)
-
-## RegExp
-
-### 语法
+## 断言语法
 
 lookahead 先行，x(?=parttern) 模式
 
@@ -119,7 +98,14 @@ var result = re.exec('hello br')
 
 ## replace的用法
 
+https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/replace
+
 注意⚠️：replace不会修改原字符串!!!
+
+替换字符串特殊变量：
+
+- $$  插入一个 "$"。
+- $& 插入匹配的子串。
 
 
 
@@ -150,7 +136,7 @@ console.log(res2)
 
 
 
-## 相关方法
+## RegExp方法
 
 ### Array.prototype.some()
 
@@ -167,4 +153,24 @@ str.match(regexp)
 **regexp**
 
 一个[正则表达式](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/RegExp)对象。如果传入一个非正则表达式对象，则会隐式地使用 `new RegExp(obj)` 将其转换为一个 [`RegExp`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/RegExp) 。如果你没有给出任何参数并直接使用match() 方法 ，你将会得到一 个包含空字符串的 [`Array`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array) ：[""]
+
+
+
+### regex.test(str)
+
+查看正则表达式与指定的字符串是否匹配。返回 `true` 或 `false`。
+
+```js
+/abc/i.test('abcd') // true
+```
+
+
+
+### str.search(regex)
+
+查看字符串与指定的正则表达式是否匹配。返回索引，未匹配到则返回-1。
+
+```js
+'dabcd'.search(/abc/i) // 1
+```
 
