[build] docs: update

--- a/docs/frontend/React/1.React学习/3.1-React-Router.md
+++ b/docs/frontend/React/1.React学习/3.1-React-Router.md
@@ -42,10 +42,44 @@ export default function App() {
 
 以下是 React-Router-DOM 5 中提供的常用 Hook：
 
-- `useParams()`：用于获取 URL 中的参数。
-- `useLocation()`：用于获取当前页面的 URL 信息，包括 pathname、search 和 hash。
-- `useHistory()`：用于获取跳转的历史记录并进行操作，例如后退或前进。
-- `useRouteMatch()`：用于检查当前的 URL 是否与给定的路径模式匹配，并返回匹配信息。
+### useParams
+
+`useParams()`：用于获取 URL 中的参数。
+
+比如定义了路由参数
+
+```tsx
+<Route path="/users/:id">
+```
+
+访问了`/users/123` 路由时，useParams就会得到`{ id: '123' }`
+
+
+
+### useLocation
+
+`useLocation()`：用于获取当前页面的 URL 信息，包括 pathname、search 和 hash。
+
+params穿参可以通过location.state获取
+
+```tsx
+history.push(`/xxxxx`, {
+  id: 'xxx',
+});
+
+const location = useLocation();
+const { id } = location.state;
+```
+
+
+
+### useHistory
+
+`useHistory()`：用于获取跳转的历史记录并进行操作，例如后退或前进。
+
+### useRouteMatch
+
+`useRouteMatch()`：用于检查当前的 URL 是否与给定的路径模式匹配，并返回匹配信息。
 
 
 
