[build] docs: update

--- a/docs/frontend/React/1.React学习/3.1-React-Router.md
+++ b/docs/frontend/React/1.React学习/3.1-React-Router.md
@@ -60,7 +60,7 @@ export default function App() {
 
 `useLocation()`：用于获取当前页面的 URL 信息，包括 pathname、search 和 hash。
 
-params穿参可以通过location.state获取
+params传参可以通过location.state获取
 
 ```tsx
 history.push(`/xxxxx`, {
