[build] docs: update

--- a/docs/frontend/JavaScript/RegExp/正则表达式.md
+++ b/docs/frontend/JavaScript/RegExp/正则表达式.md
@@ -1,8 +1,8 @@
 # RegExp
 
-https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Regular_Expressions
+[Regular_Expressions](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Regular_Expressions)
 
-https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/RegExp
+[Global_Objects/RegExp](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/RegExp)
 
 ## 断言语法
 
