[build] docs: update

--- a/docs/frontend/JavaScript/二进制文件与流/4-前端文件下载.md
+++ b/docs/frontend/JavaScript/二进制文件与流/4-前端文件下载.md
@@ -1,12 +1,6 @@
----
-title: 前端文件下载
----
+# 文件下载
 
-
-
-### 文件下载
-
-### MiMe-Type
+## MiMe-Type
 
 通过设置header中的`Content-Disposition`，指示响应头回复的内容该以何种形式展示，是以**内联**的形式（即网页或者页面的一部分），还是以**附件**的形式下载并保存到本地。
 
@@ -24,7 +18,7 @@ Content-Disposition: form-data; name="fieldName"; filename="filename.jpg"
 
 文件流下载： 比如 pdf 或者 Excel时，一般是直接点击一个连接就可以直接下载，这一般是文件流的下载方式。
 
-### GET下载
+## GET下载
 
 ```js
 let url =  xxxx.action?a=xx&b=yy;
@@ -33,7 +27,7 @@ let url =  xxxx.action?a=xx&b=yy;
  window.open(url, '_self')
 ```
 
-### POST下载(form表单)
+## POST下载(form表单)
 
 form表单下载
 
@@ -68,7 +62,7 @@ this.postExcelFile({ currentPage: 2, pageSize: 20 }, 'url/xxxxxxx/')
 
 form表单无法添加Request Header，如涉及到请求头，需要使用Ajax
 
-### Ajax通过二进制流下载文件
+## Ajax通过二进制流下载文件
 
 https://blog.csdn.net/weixin_43487782/article/details/109604950
 
@@ -129,7 +123,7 @@ if (data.headers['content-type'] === 'application/vnd.ms-excel;charset=utf-8') {
 
 
 
-### Blob、ArrayBuffer和Buffer
+## Blob、ArrayBuffer和Buffer
 
 #### Blob
 
